# hyperliquid-project

./: .env.example  .gitignore  README.md  pyproject.toml
config/: bot.example.toml  bot.toml
src/hyperliquid_bot/: __init__.py  backtest.py  cli.py  config.py  exchange_adapter.py  execution.py  features.py  market_data.py  model_registry.py  models.py  monitoring.py  orchestrator.py  policy.py  risk.py  signal_engine.py  storage.py  trainer.py  utils.py
tests/: test_backtest.py  test_bootstrap_recovery.py  test_config.py  test_features.py  test_integration_placeholder.py  test_live_execution_state.py  test_market_data_account_events.py  test_orchestrator_training.py  test_paper_execution.py  test_policy_risk.py  test_runtime_safety.py  test_training_registry.py
