[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-autobot"
version = "0.1.0"
description = "Autonomous futures trading bot scaffold for Hyperliquid testnet."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "hyperliquid-python-sdk>=0.22.0",
  "eth-account>=0.13.0,<0.14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
hyperliquid-autobot = "hyperliquid_bot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
